yaml_files/aspnet_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asp-net-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: asp-net
  template:
    metadata:
      labels:
        app: asp-net
    spec:
      containers:
        - name: asp-net
          image: ${var.ecr_image_url}
          ports:
            - containerPort: 80
          volumeMounts:
            - name: asp-net-vm
              mountPath: /asp-net
      volumes:
        - name: asp-net-v
          persistentVolumeClaim:
            claimName: aspnet-pvc
      imagePullSecrets:
        - name: ecr-credentials
