yaml_files/mongodb_statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          lifecycle:
            postS tart:
              exec:
                command: ["/bin/bash", "-c", "mongo your_database --eval 'db.createUser({user:\"${var.mongo-user-username}\", pwd: \"${var.mongo-user-password}\", roles: [{role: \"readWrite\", db: \"${var.mongodb_name}\"}]})'"]
            volumeMounts:
            - name: mongo-data
              mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
        name: mongo-db
    spec:
        storageClassName: aws-ebs
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
