yaml_files/aspnet_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnet-service
spec:
  selector:
    app: asp-net
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
